moving the template and config to common location for aws and local

--- a/templates/diagnostics.tmpl
+++ b/templates/diagnostics.tmpl
@@ -103,9 +103,10 @@
         <td>{{ .FailedChallenges }}</td>
         <td>{{ .RedeemSuccessChallenges }}</td>
         <td>{{ .RedeemErrorChallenges }}</td>
-        {{ range $key, $value := .GivenUpChallenges }}
-           <li>{{ $key }}</li>
-        {{ end }}
+        <td>{{ range $key, $value := .GivenUpChallenges }}
+             <p>{{ $key }}</p>
+            {{ end }}
+        </td>
       </tr>
       {{end}}
     </table>
